k8s/ingress/ingress_file/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  ingressClassName: nginx #！！！重点 需要指定 哪个 IngressClass 可以看上面的 deploy.yaml 最后定义的
  rules:
  - host: wang.demo.com #所有的 wang.demo.com 请求都转发到 Service demo-service
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-service
            port: 
              number: 8001  # 应用暴露给集群的端口
